# AirBnB_clone_v4

./: .gitignore  AUTHORS  README.md  dockerfile  pyproject.toml
api/v1/: app.py
web_dynamic/: 2-hbnb.py
web_dynamic/static/scripts/: 1-hbnb.js  100-hbnb.js  101-hbnb.js  2-hbnb.js  3-hbnb.js  4-hbnb.js
web_dynamic/static/styles/: 3-header.css
web_dynamic/templates/: 1-hbnb.html  100-hbnb.html  101-hbnb.html  2-hbnb.html  3-hbnb.html  4-hbnb.html
