[tool.poetry]
name = "airbnb-clone-v4"
version = "0.1.0"
description = ""
authors = ["Ifiok Ekott <ekottifiok@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "airbnb_clone_v4"}]

[tool.poetry.dependencies]
python = "^3.8"
attrs = "22.2.0"
click = "8.1.3"
flasgger = "0.9.5"
flask = "2.2.2"
flask-cors = "3.0.10"
greenlet = "2.0.1"
importlib-metadata = "6.0.0"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
jsonschema = "3.0.1"
markupsafe = "2.1.2"
mistune = "2.0.4"
mysqlclient = "2.1.1"
pyrsistent = "0.19.3"
pyyaml = "6.0"
six = "1.16.0"
sqlalchemy = "1.4.46"
werkzeug = "2.2.2"
zipp = "3.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
